# oaf-pre-commit-hooks

./: .gitignore  .gitlint  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  config.json  release_notes.md  setup.cfg
pre_commit_hooks/: oaf_pre_commit_hook_git_branch.py  oaf_pre_commit_hook_git_commit.py  oaf_tech_pre_commit_hook.py  utils.py
tests/: oaf_pre_commit_hook_git_branch_test.py  oaf_tech_pre_commit_hook_test.py
