[metadata]
name = oaf_pre_commit_hooks
version = 2.0.0
description = Pre-commit hooks to validate GitFlow and Git conventions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/one-acre-fund/oaf-pre-commit-hooks
author="Sixbert Uwiringiyimana",
author_email="s**.u**@oneacrefund.org",
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:

package_dir =
    utils = pre_commit_hooks/utils.py

install_requires =
    ruamel.yaml>=0.15
    tomli>=1.1.0;python_version<"3.11"
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    oaf-pre-commit-hook-git-branch = pre_commit_hooks.oaf_pre_commit_hook_git_branch:main
    oaf-pre-commit-hook-git-commit = pre_commit_hooks.oaf_pre_commit_hook_git_commit:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
